[gd_scene load_steps=5 format=3 uid="uid://bkrno03cclo3s"]

[ext_resource type="Script" path="res://Linha.gd" id="1_2n4qg"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5y30j"]
resource_local_to_scene = true
albedo_color = Color(0.603922, 0.737255, 0.796078, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_a0hft"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_5y30j")

[sub_resource type="BoxShape3D" id="BoxShape3D_7y1is"]

[node name="Node3D" type="Node3D"]
script = ExtResource("1_2n4qg")

[node name="Area3D" type="Area3D" parent="."]
input_capture_on_drag = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D"]
transform = Transform3D(0.08, 0, 0, 0, 1, 0, 0, 0, 0.08, 0, 0, -2.67657)
mesh = SubResource("CylinderMesh_a0hft")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(0.16, 0, 0, 0, 2.049, 0, 0, 0, 0.16, 0, 0, -2.6697)
shape = SubResource("BoxShape3D_7y1is")

[node name="InfoNeuronio" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.941176)
offset_left = 40.0
offset_top = 486.0
offset_right = 238.0
offset_bottom = 611.0

[node name="RichTextLabel" type="RichTextLabel" parent="InfoNeuronio"]
layout_mode = 0
offset_left = 15.0
offset_top = 11.0
offset_right = 210.0
offset_bottom = 51.0
text = "Linha tal tal tal"

[node name="dados" type="RichTextLabel" parent="InfoNeuronio"]
layout_mode = 0
offset_left = 16.0
offset_top = 52.0
offset_right = 211.0
offset_bottom = 112.0
text = "Peso:
"

[connection signal="mouse_entered" from="Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_area_3d_mouse_exited"]
